Fixed tutorial hand position on small screens

--- a/src/components/TutorialInfo.module.scss
+++ b/src/components/TutorialInfo.module.scss
@@ -1,15 +1,17 @@
 .pointer {
   position: absolute;
   animation: 3800ms ease-in-out infinite forwards click;
-  bottom: 25%;
-  right: 0;
+  bottom: calc(25% / (3 - var(--adjustment)));
+  right: 10%;
   translate: 72% 100%;
   font-size: 2rem;
   pointer-events: none;
   color: black;
 
+  --adjustment: 1;
+
   @media (min-width: 767px) {
-    --right-adjustment: 
+    --adjustment: 2;
   }
 }
 
@@ -27,8 +29,8 @@
     scale: 1;
   }
   26% {
-    bottom: 50%;
-    right: 25%;
+    bottom: calc(50% / (3 - var(--adjustment)));
+    right: calc(50% / var(--adjustment));
   }
   33% {
     scale: 0.9;
@@ -53,8 +55,8 @@
     opacity: 0;
   }
   100% {
-    bottom: 50%;
-    right: 25%;
+    bottom: calc(50% / (3 - var(--adjustment)));
+    right: calc(50% / var(--adjustment));
     opacity: 0;
   }
 }
